# shadcn-ui

./: .envrc  .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  COMPONENT_STATUS.md  Cargo.toml  DEVELOPMENT.md  Makefile  NIX_SETUP.md  README.md  components.toml  deny.toml  flake.nix  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  test_import.rs  tsconfig.json
book-examples/leptos/: Cargo.optimized.toml  Cargo.toml  DEMO_FEATURES.md  DISTRIBUTION_GUIDE.md  PR_SUMMARY.md  PR_TEMPLATE.md  README.md  Trunk.toml  example-usage.md  index.html  tailwind.config.js
book-examples/leptos/src/: alert.rs  alert_destructive.rs  app.rs  bundle_analyzer.rs  button.rs  button_as_child.rs  button_destructive.rs  button_ghost.rs  button_icon.rs  button_link.rs  button_loading.rs  button_outline.rs  button_secondary.rs  button_with_icon.rs  default.rs  dynamic_loader.rs  lazy_loading.rs  main.rs  new_york.rs  test_essential.rs
book-examples/leptos/src/components/: ui.rs
book-examples/leptos/src/default/: alert.rs  badge.rs  breadcrumb.rs  button.rs  card.rs  checkbox.rs  combobox.rs  dialog.rs  form.rs  input.rs  pagination.rs  radio_group.rs  select.rs  table.rs  tabs.rs  textarea.rs  tooltip.rs
book-examples/leptos/src/default/alert/: alert.rs  alert_class.rs  alert_destructive.rs  alert_icon.rs
book-examples/leptos/src/default/badge/: badge.rs  badge_destructive.rs  badge_outline.rs  badge_secondary.rs
book-examples/leptos/src/default/breadcrumb/: breadcrumb.rs  breadcrumb_dropdown.rs  breadcrumb_ellipsis.rs  breadcrumb_link.rs  breadcrumb_responsive.rs  breadcrumb_separator.rs
book-examples/leptos/src/default/button/: button.rs  button_as_child.rs  button_destructive.rs  button_ghost.rs  button_icon.rs  button_link.rs  button_loading.rs  button_outline.rs  button_secondary.rs  button_with_icon.rs
book-examples/leptos/src/default/card/: card.rs  card_with_form.rs
book-examples/leptos/src/default/combobox/: combobox_example.rs
book-examples/leptos/src/default/components/: ui.rs
book-examples/leptos/src/default/form/: form_example.rs
book-examples/leptos/src/default/input/: input.rs  input_disabled.rs  input_file.rs  input_form.rs  input_with_button.rs  input_with_label.rs  input_with_text.rs
book-examples/leptos/src/default/label/: label.rs
book-examples/leptos/src/default/pagination/: pagination.rs
book-examples/leptos/src/default/radio-group/: radio_group.rs
book-examples/leptos/src/default/skeleton/: skeleton.rs  skeleton_card.rs
book-examples/leptos/src/default/table/: table.rs
book-examples/leptos/src/default/textarea/: textarea.rs  textarea_disabled.rs  textarea_form.rs  textarea_with_button.rs  textarea_with_label.rs  textarea_with_text.rs
book-examples/leptos/src/new_york/: alert.rs  badge.rs  breadcrumb.rs  button.rs  card.rs  checkbox.rs  dialog.rs  input.rs  label.rs  radio-group.rs  radio_group.rs  select.rs  skeleton.rs  table.rs  tabs.rs  textarea.rs
book-examples/leptos/src/new_york/alert/: alert.rs  alert_class.rs  alert_destructive.rs  alert_icon.rs
book-examples/leptos/src/new_york/badge/: badge.rs  badge_destructive.rs  badge_outline.rs  badge_secondary.rs
book-examples/leptos/src/new_york/breadcrumb/: breadcrumb.rs  breadcrumb_dropdown.rs  breadcrumb_ellipsis.rs  breadcrumb_link.rs  breadcrumb_responsive.rs  breadcrumb_separator.rs
book-examples/leptos/src/new_york/button/: button.rs  button_as_child.rs  button_destructive.rs  button_ghost.rs  button_icon.rs  button_link.rs  button_loading.rs  button_outline.rs  button_secondary.rs  button_with_icon.rs
book-examples/leptos/src/new_york/card/: card.rs  card_with_form.rs
book-examples/leptos/src/new_york/components/: ui.rs
book-examples/leptos/src/new_york/input/: input.rs  input_disabled.rs  input_file.rs  input_form.rs  input_with_button.rs  input_with_label.rs  input_with_text.rs
book-examples/leptos/src/new_york/label/: label.rs
book-examples/leptos/src/new_york/pagination/: pagination.rs
book-examples/leptos/src/new_york/radio-group/: radio_group.rs
book-examples/leptos/src/new_york/skeleton/: skeleton.rs  skeleton_card.rs
book-examples/leptos/src/new_york/table/: table.rs
book-examples/leptos/src/new_york/textarea/: textarea.rs  textarea_disabled.rs  textarea_form.rs  textarea_with_button.rs  textarea_with_label.rs  textarea_with_text.rs
book-examples/leptos/style/: optimization.css  tailwind.css
book-examples/yew/: Cargo.toml  tailwind.config.js
book-examples/yew/src/: app.rs  button.rs  button_as_child.rs  button_destructive.rs  button_ghost.rs  button_icon.rs  button_link.rs  button_loading.rs  button_outline.rs  button_secondary.rs  button_with_icon.rs  default.rs  main.rs  new_york.rs  skeleton.rs  skeleton_card.rs
book-examples/yew/src/components/: ui.rs
book-examples/yew/src/default/: alert.rs  aspect_ratio.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  button_as_child.rs  button_link.rs  button_loading.rs  card.rs  input.rs  label.rs  pagination.rs  radio-group.rs  select.rs  separator.rs  skeleton.rs  skeleton_card.rs  switch.rs  table.rs  textarea.rs  tooltip.rs
book-examples/yew/src/default/alert/: alert.rs  alert_destructive.rs
book-examples/yew/src/default/avatar/: avatar.rs
book-examples/yew/src/new_york/: alert.rs  aspect_ratio.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  button_destructive.rs  button_ghost.rs  button_icon.rs  button_outline.rs  button_secondary.rs  button_with_icon.rs  card.rs  input.rs  label.rs  pagination.rs  radio-group.rs  separator.rs  skeleton.rs  switch.rs  table.rs  textarea.rs
scripts/: Cargo.toml  README.md  analyze_bundle.sh  build_production.sh  fix_remaining_tests.sh  generate_batch_components.sh  generate_component.sh  generate_component_v2.sh  generate_leptos_component.sh  generate_leptos_component_advanced.sh  generate_leptos_component_simple.sh  generate_missing_tests.rs  optimize_bundle.sh  run-tests.sh  run_tests.sh  test_dialog.sh  test_enhanced_framework.sh  test_radio_group.sh  test_tooltip.sh
scripts/templates/: form_component.rs
(+154 files in other folders)
