[workspace]
members = [
    "book-examples/*",
    "packages/leptos/*",
    "packages/registry",
    "packages/shadcn",
    "packages/yew/*",
    "scripts",
]
resolver = "2"

[workspace.package]
authors = ["Rust For Web <info@rustforweb.org>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/RustForWeb/shadcn-ui"
version = "0.0.1"

[workspace.dependencies]
anyhow = "1.0.89"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
env_logger = "0.11.3"
leptos = "0.7.0-rc2"
leptos_router = "0.7.0-rc2"
leptos-node-ref = "0.1.0"
leptos-struct-component = "0.1.0"
leptos-style = "0.1.0"
log = "0.4.21"
lucide-leptos = "1.0.0"
lucide-yew = "1.0.0"
radix-leptos-icons = { git = "https://github.com/RustForWeb/radix.git" }
radix-yew-icons = "0.0.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tailwind_fuse = { version = "0.3.0", features = ["variant"] }
tokio = { version = "1.38.0", features = ["full"] }
web-sys = "0.3.70"
yew = "0.21.0"
yew-router = "0.18.0"
yew-struct-component = "0.1.4"
yew-style = "0.1.4"

[patch.crates-io]
yew = { git = "https://github.com/RustForWeb/yew.git", branch = "feature/use-composed-ref" }
yew-router = { git = "https://github.com/RustForWeb/yew.git", branch = "feature/use-composed-ref" }
