[package]
name = "scripts"
description = "Scripts for Rust shadcn/ui."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
shadcn-registry = { path = "../packages/registry" }
serde_json.workspace = true
tokio.workspace = true
