[package]
name = "scripts"
description = "Scripts for Rust shadcn/ui."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
convert_case = "0.8.0"
env_logger.workspace = true
handlebars = "6.1.0"
log.workspace = true
regex = "1.11.0"
serde.workspace = true
serde_json.workspace = true
shadcn-registry = { path = "../packages/registry" }
