[package]
name = "shadcn-ui-leptos-book"
description = "Book examples for shadcn/ui Leptos."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["alert", "badge", "button", "card"]
alert = [
    "dep:lucide-leptos",
    # "dep:radix-leptos-icons",
    "dep:shadcn-ui-leptos-alert",
    "lucide-leptos/development",
    "lucide-leptos/notifications",
]
badge = ["dep:shadcn-ui-leptos-badge"]
button = [
    "dep:lucide-leptos",
    # "dep:radix-leptos-icons",
    "dep:shadcn-ui-leptos-button",
    "lucide-leptos/arrows",
    "lucide-leptos/layout",
    "lucide-leptos/mail",
]
card = [
    "dep:lucide-leptos",
    "dep:shadcn-ui-leptos-button",
    "dep:shadcn-ui-leptos-card",
    "lucide-leptos/notifications",
]

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
leptos = { workspace = true, features = ["csr"] }
leptos_router.workspace = true
log.workspace = true
lucide-leptos = { workspace = true, optional = true }
# radix-leptos-icons = { workspace = true, optional = true }
shadcn-ui-leptos-alert = { path = "../../packages/leptos/alert", optional = true }
shadcn-ui-leptos-badge = { path = "../../packages/leptos/badge", optional = true }
shadcn-ui-leptos-button = { path = "../../packages/leptos/button", optional = true }
shadcn-ui-leptos-card = { path = "../../packages/leptos/card", optional = true }
