[package]
name = "shadcn-ui-yew-book"
description = "Book examples for shadcn/ui Yew."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
log.workspace = true
radix-yew-icons = { workspace = true, optional = true }
shadcn-ui-yew-alert = { path = "../../packages/yew/alert", optional = true }
shadcn-ui-yew-aspect-ratio = { path = "../../packages/yew/aspect-ratio", optional = true }
shadcn-ui-yew-avatar = { path = "../../packages/yew/avatar", optional = true }
shadcn-ui-yew-badge = { path = "../../packages/yew/badge", optional = true }
shadcn-ui-yew-button = { path = "../../packages/yew/button", optional = true }
shadcn-ui-yew-card = { path = "../../packages/yew/card", optional = true }
shadcn-ui-yew-input = { path = "../../packages/yew/input", optional = true }
shadcn-ui-yew-label = { path = "../../packages/yew/label", optional = true }
shadcn-ui-yew-pagination = { path = "../../packages/yew/pagination", optional = true }
shadcn-ui-yew-separator = { path = "../../packages/yew/separator", optional = true }
shadcn-ui-yew-skeleton = { path = "../../packages/yew/skeleton", optional = true }
shadcn-ui-yew-switch = { path = "../../packages/yew/switch", optional = true }
shadcn-ui-yew-table = { path = "../../packages/yew/table", optional = true }
shadcn-ui-yew-textarea = { path = "../../packages/yew/textarea", optional = true }
web-sys.workspace = true
yew = { workspace = true, features = ["csr"] }
yew-lucide = { git = "https://gitlab.com/stephan.dilly/yew-lucide", branch = "yew-upgrade", optional = true }
yew-router.workspace = true

[features]
default = [
    "alert",
    "aspect-ratio",
    "avatar",
    "badge",
    "button",
    "card",
    "input",
    "label",
    "pagination",
    "separator",
    "skeleton",
    "switch",
    "table",
    "textarea",
]
alert = [
    "dep:radix-yew-icons",
    "dep:shadcn-ui-yew-alert",
    "dep:yew-lucide",
    "radix-yew-icons/exclamation-triangle",
    "radix-yew-icons/rocket",
]
aspect-ratio = ["dep:shadcn-ui-yew-aspect-ratio"]
avatar = ["dep:shadcn-ui-yew-avatar"]
badge = ["dep:shadcn-ui-yew-badge"]
button = [
    "dep:radix-yew-icons",
    "dep:shadcn-ui-yew-button",
    "dep:yew-lucide",
    "radix-yew-icons/chevron-right",
    "radix-yew-icons/envelope-open",
    "radix-yew-icons/reload",
]
card = [
    "dep:radix-yew-icons",
    "dep:shadcn-ui-yew-button",
    "dep:shadcn-ui-yew-card",
    "dep:shadcn-ui-yew-input",
    "dep:shadcn-ui-yew-label",
    "dep:shadcn-ui-yew-switch",
    "dep:yew-lucide",
    "radix-yew-icons/bell",
    "radix-yew-icons/check",
]
input = [
    "dep:shadcn-ui-yew-button",
    "dep:shadcn-ui-yew-input",
    "dep:shadcn-ui-yew-label",
]
label = ["dep:shadcn-ui-yew-label"]
pagination = ["dep:shadcn-ui-yew-pagination"]
separator = ["dep:shadcn-ui-yew-separator"]
skeleton = ["dep:shadcn-ui-yew-skeleton"]
switch = ["dep:shadcn-ui-yew-label", "dep:shadcn-ui-yew-switch"]
table = ["dep:shadcn-ui-yew-table"]
textarea = [
    "dep:shadcn-ui-yew-button",
    "dep:shadcn-ui-yew-label",
    "dep:shadcn-ui-yew-textarea",
]
