[package]
name = "shadcn-ui-yew-book"
description = "Book examples for shadcn/ui Yew."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "alert",
    "aspect-ratio",
    "avatar",
    "badge",
    "breadcrumb",
    "button",
    "card",
    "dialog",
    "input",
    "label",
    "pagination",
    "radio-group",
    "separator",
    "skeleton",
    "switch",
    "table",
    "textarea",
]
alert = [
    "dep:lucide-yew",
    "dep:radix-yew-icons",
    "dep:shadcn-ui-yew-alert",
    "lucide-yew/development",
    "lucide-yew/notifications",
]
aspect-ratio = ["dep:shadcn-ui-yew-aspect-ratio"]
avatar = ["dep:shadcn-ui-yew-avatar"]
badge = ["dep:shadcn-ui-yew-badge"]
breadcrumb = [
    "dep:lucide-yew",
    "dep:radix-yew-icons",
    "dep:shadcn-ui-yew-breadcrumb",
    "lucide-yew/development",
]
button = [
    "dep:lucide-yew",
    "dep:radix-yew-icons",
    "dep:shadcn-ui-yew-button",
    "lucide-yew/layout",
    "lucide-yew/mail",
    "lucide-yew/navigation",
]
card = [
    "dep:lucide-yew",
    "dep:radix-yew-icons",
    "dep:shadcn-ui-yew-button",
    "dep:shadcn-ui-yew-card",
    "dep:shadcn-ui-yew-input",
    "dep:shadcn-ui-yew-label",
    "dep:shadcn-ui-yew-switch",
    "lucide-yew/notifications",
]
input = [
    "dep:shadcn-ui-yew-button",
    "dep:shadcn-ui-yew-input",
    "dep:shadcn-ui-yew-label",
]
label = ["dep:shadcn-ui-yew-label"]
pagination = ["dep:shadcn-ui-yew-pagination"]
separator = ["dep:shadcn-ui-yew-separator"]
skeleton = ["dep:shadcn-ui-yew-skeleton"]
switch = ["dep:shadcn-ui-yew-label", "dep:shadcn-ui-yew-switch"]
table = ["dep:shadcn-ui-yew-table"]
textarea = [
    "dep:shadcn-ui-yew-button",
    "dep:shadcn-ui-yew-label",
    "dep:shadcn-ui-yew-textarea",
]
radio-group = ["dep:shadcn-ui-yew-radio-group"]
dialog = ["dep:shadcn-ui-yew-dialog"]

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
log.workspace = true
lucide-yew = { workspace = true, optional = true }
radix-yew-icons = { workspace = true, optional = true }
shadcn-ui-yew-alert = { path = "../../packages/yew/alert", optional = true }
shadcn-ui-yew-aspect-ratio = { path = "../../packages/yew/aspect-ratio", optional = true }
shadcn-ui-yew-avatar = { path = "../../packages/yew/avatar", optional = true }
shadcn-ui-yew-badge = { path = "../../packages/yew/badge", optional = true }
shadcn-ui-yew-breadcrumb = { path = "../../packages/yew/breadcrumb", optional = true }
shadcn-ui-yew-button = { path = "../../packages/yew/button", optional = true }
shadcn-ui-yew-card = { path = "../../packages/yew/card", optional = true }
shadcn-ui-yew-input = { path = "../../packages/yew/input", optional = true }
shadcn-ui-yew-label = { path = "../../packages/yew/label", optional = true }
shadcn-ui-yew-pagination = { path = "../../packages/yew/pagination", optional = true }
shadcn-ui-yew-separator = { path = "../../packages/yew/separator", optional = true }
shadcn-ui-yew-skeleton = { path = "../../packages/yew/skeleton", optional = true }
shadcn-ui-yew-switch = { path = "../../packages/yew/switch", optional = true }
shadcn-ui-yew-table = { path = "../../packages/yew/table", optional = true }
shadcn-ui-yew-radio-group = { path = "../../packages/yew/radio-group", optional = true }
shadcn-ui-yew-dialog = { path = "../../packages/yew/dialog", optional = true }
shadcn-ui-yew-textarea = { path = "../../packages/yew/textarea", optional = true }
yew = { workspace = true, features = ["csr"] }
yew-router.workspace = true
